@startuml

title __TINYMACHINESE4's Class Diagram__\n

  namespace  {
    class main.MainApplication {
    }
  }
  

  namespace  {
    namespace ntities {
      abstract class entities.Entity {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Marble {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Point {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Rectangle {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.SimpleTrack {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Sphere {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Track {
      }
    }
  }
  

  namespace  {
    namespace ain {
      class main.Simulation {
      }
    }
  }
  

  namespace  {
    namespace isc {
      class misc.Polynomial3d {
      }
    }
  }
  

  namespace  {
    namespace isc {
      class misc.Utils {
      }
    }
  }
  

  namespace  {
    namespace isc {
      class misc.Vec3d {
      }
    }
  }
  

  main.MainApplication -up-|> javafx.application.Application
  entities.Entity o-- misc.Vec3d : accel
  entities.Entity o-- misc.Vec3d : pos
  entities.Entity o-- misc.Vec3d : velo
  entities.Marble -up-|> entities.Sphere
  entities.Point -up-|> entities.Entity
  entities.Rectangle -up-|> entities.Entity
  entities.Rectangle o-- misc.Vec3d : dimensions
  entities.Rectangle o-- misc.Vec3d : normal
  entities.SimpleTrack -up-|> entities.Track
  entities.Sphere -up-|> entities.Entity
  entities.Track o-- misc.Polynomial3d : trackFunc
  misc.Polynomial3d o-- misc.Polynomial3d : derived


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
